<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBlueGreyPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="30dp"
        android:scaleType="fitXY"
        android:background="@drawable/ic_group_add_black_36dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="333dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:layout_weight="0.58"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:weightSum="1">

        <EditText
            android:id="@+id/name"
            style="@android:style/Widget.DeviceDefault.Light.EditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_reg_name"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint"
            android:textSize="14sp"
            android:maxLength="12"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_reg_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:maxLength="12"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="10dp"
            android:maxLength="40"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint"
            android:textSize="14sp" />

        <com.universe.yz.admin.widget.RoundCornerButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:enabled="true"
            android:gravity="center"
            android:text="@string/btn_register"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:rcb_backgroundColor="@color/yellow"
            app:rcb_backgroundColorDisabled="@color/light_grey"
            app:rcb_cornerRadius="20dp" />

        <Button
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>